# API-Correios

./: pyproject.toml
src/correios_cep/: addresses.sql  container.py  database.py  exceptions.py  interfaces.py  main.py
src/correios_cep/controller/: correios_controller.py
src/correios_cep/model/: address.py
src/correios_cep/repository/: correios_repository.py  repository.py  setup_repository.py
src/correios_cep/service/: correios_service.py  csvfile_service.py  service.py
tests/: test_controller.py  test_csvfile_service.py
