[project]
name = "correios-cep"
version = "0.1.0"
description = ""
authors = [
    {name = "mayconct32",email = "maycon326754@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "correios_cep", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
