[project]
name = "correios-cep"
version = "0.1.0"
description = ""
authors = [
    {name = "mayconct32",email = "maycon326754@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.133.1,<0.134.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "mysql-connector-python (>=9.6.0,<10.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "asgi-lifespan (>=2.1.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "correios_cep", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
